Added archived_at and other changes
